--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "spatie/laravel-permission": "^5.10",
+        "spatie/laravel-query-builder": "^5.2",
         "tymon/jwt-auth": "^2.0"
     },
     "require-dev": {
