--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,8 @@
         "laravel/passport": "^11.8",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "maatwebsite/excel": "^1.1",
+        "phpoffice/phpspreadsheet": "^1.28",
         "spatie/laravel-permission": "^5.10",
         "spatie/laravel-query-builder": "^5.2",
         "tymon/jwt-auth": "^2.0"
