--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.1",
         "aws/aws-sdk-php": "^3.269",
         "guzzlehttp/guzzle": "^7.2",
+        "intervention/image": "^2.7",
         "laravel/framework": "^10.8",
         "laravel/helpers": "^1.6",
         "laravel/passport": "^11.8",
